--- a/UI/package.json
+++ b/UI/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.13",
